# topic-model

./: .gitignore  Dockerfile  README.md  build.py  ctm_test.csv  docker-compose.yml  main.py  pyproject.toml  setup.py  train.py
cytm/: _clda.pxd  atm.py  atm_c.pyx  ctm.py  lda.py  lda_c.html  lda_c.pyx  ldab.py  ldab_c.pyx  nctm.py  nctm_c.pyx  nlde.py  pltm.py  pltm_c.html  researcher2vec.py  sppmi_c.pyx  sppmi_svd.py  sppmi_svd_c.html  sppmi_svd_c.pyx  util.py
data/: lda_test.txt
data/20news/: dl_preprocess.py
model/: clda.html  clda.pyx  ctm.py  ctm_c.html  ctm_c.pyx  lda.py  lda_c.html  lda_c.pyx  nctm.py  nctm_c.html  nctm_c.pyx  pltm.py  pltm_c.html  pltm_c.pyx  pylda.py  util.py
notebooks/: lda.py  test_generate_lda_toy_data.ipynb  test_lda.ipynb  test_pylda.ipynb  test_utils.py
