[tool.poetry]
name = "text-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "cytm" }]
include = [{ path = "cytm/**/*.so", format = "wheel" }]

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
cython = "^3.0.11"
gensim = "^4.3.3"
tqdm = "^4.67.1"
pandas = "^2.2.3"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core", "numpy>=1.26.0", "cython>=3.0.0"]
build-backend = "poetry.core.masonry.api"
